--- a/StardewValleyCalculator/StardewValleyCalculator.csproj
+++ b/StardewValleyCalculator/StardewValleyCalculator.csproj
@@ -57,6 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data.cs" />
     <Compile Include="Fish.cs" />
     <Compile Include="FishInfoForm.cs">
       <SubType>Form</SubType>
